kubernetes/old-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 2 # Set your desired number of replicas
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
     # imagePullSecrets:
     #   - name: gitlab-registry-secret # Reference your GitLab registry secret here
      containers:
        - name: myapp-container
          image: "eliseror/new_repo:argocd_8" #"851725362124.dkr.ecr.eu-north-1.amazonaws.com/my_ecr_repo_1:restaurant-app-4" 
          ports:
            - containerPort: 8000 # Port your container listens on
