kubernetes/old-files/new-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app: myapp
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80        # The port exposed by the service (external access)
      targetPort: 8000 # The container's internal port
  type: ClusterIP    # Exposes service inside the cluster, change to LoadBalancer if you need external access directly
