kubernetes/old-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: ingress-nginx  # Change to ingress namespace
  labels:
    app: myapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: myapp
